--- a/index.htm
+++ b/index.htm
@@ -5,5 +5,9 @@
 <h1>hullhul.github.io - page</h1>
 <p>...welcome...</p>
 
+<form action="https://github.com/Hullhul/Farbmusik/Farbmusik.html">
+    <input type="submit" value="Farbmusik starten">
+</form>
+
 </body>
 </html>
