--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 <p>...welcome...</p>
 
 <form action="https://github.com/Hullhul/Farbmusik/Farbmusik.html">
-    <input type="submit" value="Farbmusik starten">
+    <input type="button" value="Farbmusik starten">
 </form>
 
 </body>
