--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,7 @@
 <h1>hullhul.github.io - page</h1>
 <p>...welcome...</p>
 
-<form action="https://github.com/Hullhul/Farbmusik/Farbmusik.html">
-    <input type="button" value="Farbmusik starten">
-</form>
+<button type="button" onclick="http://www.google.com">Click Me!</button>
 
 </body>
 </html>
