--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,7 @@
 <h1>hullhul.github.io - page</h1>
 <p>...welcome...</p>
 
-<input type=button onClick="parent.location='http://www.google.com/'" value='click here to visit home page'>
-<button type="button" onclick="http://www.google.com">Click Me!</button>
+<input type=button onClick="parent.location='https://github.com/Hullhul/Farbmusik/Farbmusik.html'" value='Farbmusik starten'>
 
 </body>
 </html>
