--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <h1>hullhul.github.io - page</h1>
 <p>...welcome...</p>
 
-<input type=button onClick="parent.location='https://github.com/Hullhul/Farbmusik/Farbmusik.html'" value='Farbmusik starten'>
+<input type=button onClick="location.href='/Farbmusik/Farbmusik.html'" value='Farbmusik starten'>
 
 </body>
 </html>
